cmake_minimum_required(VERSION 2.8)
project(RGBA)
set(MAIN_PROJECT_SRC_LIST Lesson_01)
set(SOURCE_LIB RGBA.cpp)
set(CMAKE_CXX_FLAGS "-std=c++17 -Wall")
set(SRC_LIST lib/RGBA.h lib/RGBA.cpp lib/L_01_T_02.cpp)
add_executable(../L_01_T_02 ./lib/L_01_T_02.cpp)
add_subdirectory(./lib)
target_link_libraries(../L_01_T_02 lib)
