cmake_minimum_required(VERSION 2.8)
project(Stack)
set(MAIN_PROJECT_SRC_LIST L_01_T_03)
set(SOURCE_LIB Stack.cpp)
set(CMAKE_CXX_FLAGS "-std=c++17 -Wall")
set(SRC_LIST lib/Stack.h lib/Stack.cpp lib/L_01_T_03.cpp)
add_executable(../L_01_T_03 ./lib/L_01_T_03.cpp)
add_subdirectory(./lib)
target_link_libraries(../L_01_T_03 lib)
