cmake_minimum_required(VERSION 2.8)
project(L_02_T_01)
set(MAIN_PROJECT_SRC_LIST L_02_T_01)
set(SOURCE_LIB Student.cpp)
add_definitions(-Wall -O3)
set(CMAKE_CXX_FLAGS -std=c++17)
set(SRC_LIST Person.cpp Student.cpp L_02_T_01.cpp)
add_executable(../L_02_T_01 ./lib/L_02_T_01.cpp)
add_subdirectory(./lib)
target_link_libraries(../L_02_T_01 lib)
