cmake_minimum_required(VERSION 2.8)
project(L_02_T_02)
set(MAIN_PROJECT_SRC_LIST L_02_T_02)
set(SOURCE_LIB Apple.cpp)
add_definitions(-Wall -O3)
set(CMAKE_CXX_FLAGS -std=c++17)
set(SRC_LIST Apple.cpp L_02_T_02.cpp)
add_executable(../L_02_T_02 ./lib/L_02_T_02.cpp)
add_subdirectory(./lib)
target_link_libraries(../L_02_T_02 lib)
