cmake_minimum_required(VERSION 2.9)
project(L_04_T_03)
set(MAIN_PROJECT_SRC_LIST L_04_T_03)
set(SOURCE_LIB Hand.cpp)
add_definitions(-Wall -O3)
set(CMAKE_CXX_FLAGS -std=c++17)
set(SRC_LIST Hand.cpp L_04_T_03.cpp)
add_executable(../L_04_T_03 ./lib/L_04_T_03.cpp)
add_subdirectory(./lib)
target_link_libraries(../L_04_T_03 lib)
