cmake_minimum_required(VERSION 2.8)
project(L_07_T_02)
set(MAIN_PROJECT_SRC_LIST L_07_T_02)
set(SOURCE_LIB Date.cpp) 
add_definitions(-Wall -O3)
set(CMAKE_CXX_FLAGS -std=c++17)
set(SRC_LIST Datte.cpp L_07_T_02.cpp)
add_executable(../L_07_T_02 ./lib/L_07_T_02.cpp)
add_subdirectory(./lib)
target_link_libraries(../L_07_T_02 lib)
