cmake_minimum_required(VERSION 2.8)
project(BlackJack)
set(MAIN_PROJECT_SRC_LIST BlackJack)
set(SOURCE_LIB main.cpp) 
add_definitions(-Wall -O3)
set(CMAKE_CXX_FLAGS -std=c++17)
set(SRC_LIST main.cpp)
add_executable(../BlackJack ./lib/main.cpp)
add_subdirectory(./lib)
target_link_libraries(../BlackJack lib)
