cmake_minimum_required(VERSION 2.8)
project(Robot)
set(MAIN_PROJECT_SRC_LIST Robot)
set(SOURCE_LIB L_08_T_03.cpp) 
add_definitions(-Wall -O3)
set(CMAKE_CXX_FLAGS -std=c++17)
set(SRC_LIST L_08_T_03.cpp)
add_executable(../Robot ./lib/L_08_T_03.cpp)
add_subdirectory(./lib)
target_link_libraries(../Robot lib)
